--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,6 +6,8 @@
     <string name="action_settings">Settings</string>
     <string name="edit_message">Edit Message</string>
     <string name="send">Send</string>
-    <string name="title_activity_display_message">My Message</string>
+    <string name="receive">Receive</string>
+    <string name="title_activity_play_vid">PlayVidActivity</string>
+    <string name="done">Done</string>
 
 </resources>
