--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -9,5 +9,6 @@
     <string name="receive">Receive</string>
     <string name="title_activity_play_vid">PlayVidActivity</string>
     <string name="done">Done</string>
-
+    <string name="title_activity_recorder">RecorderActivity</string>
+	<string name="rec">Record</string>
 </resources>
